# FINSIGHT

./: .env  .env.example  .gitignore  Cbuild.txt  README.md  check_imported_data.py  cleanedpt  cleanedpt.py  config.py  debug_csv_complete.py  debug_csv_content.py  finance_execute.py  import_csv_to_mongodb.py  import_external_data.py  input_records.txt  main.py  merge_mongodb_docs.py  migrate_ict_data.py  n8n_workflow_ai_agent.json  n8n_workflow_updated.json  requirements.txt  test_api.py
ML/: check_path.py  config.py
ML/calculation/: CmakePresets.json  Makefile  _evaluate.cpp  cmake_install.cmake  efficiency.cpp  growth.cpp  liquidity.cpp  profitability.cpp
ML/calculation/utils/: extend.cpp
ML/models/: core_y_scaler.pkl  liquidity_core.pth  lq8.pth  lq_cash_ratio.pth
ML/models/Linear/: mdll001.py  mdll002.py  tf001.py
ML/models/Linear/Torchs/: ptorch001.py
ML/normalization/general/: stdscore.cpp  stdscore.py
ML/normalization/minmax/: stdmm.cpp  stdmm.py
ML/normalization/zscore/torchs/: std_nml_visual_torchs.py
data/json/: assets.json  prototype01.json  reports.json
data/raw/: assets001.csv  cleandpt001.csv  cleanedpt001.csv
libs/: evaluate_module_update.cp311-win_amd64.pyd
main/finsight_services/: db.sqlite3  fn_assets.py  manage.py  package-lock.json  requirements.txt
main/finsight_services/config/: settings.py  urls.py
main/finsight_services/data/dataset/: liquidity_dataset.csv  profitability_dataset.csv
main/finsight_services/data/json/: assets.json  reports.json
main/finsight_services/data/raw/: assets001.csv  cleandpt001.csv
main/finsight_services/main/finsightui/: package-lock.json  vite.config.js
main/finsight_services/models/: core_x_scaler.pkl  liquidity_scaler.pkl  liquidity_x_scaler.pkl
main/finsight_services/scrapers/search/: search_engine.py
main/finsight_services/testing/: evaluate_t001.cpp  fn_assets.py
main/finsight_services/todo/: analysis.py  auth_views.py  models.py  testview.py  view.py  views.py
main/finsight_services/todo/middleware/: __init__.py  auth_middleware.py
main/finsight_services/todo/services/: analysis.py  auth_service.py  companies_search.py  (+10 more)
main/finsight_services/utils/: comm_functions.py
main/finsightui/: package-lock.json  package.json  search.html  vite.config.js
main/finsightui/src/: App.css  App.jsx
ml_pipeline/: check_path.py
ml_pipeline/calculation/: CMakeCache.txt  CMakeLists.txt  _evaluate.cpp  efficiency.cpp  growth.cpp  liquidity.cpp  profitability.cpp
scrapers/cafeF/Month/: scraper_mdll_2001.py
scrapers/cafeF/Quarter/: scraper_mdll_0001.py
scrapers/cafeF/Year/: scraper_mdll_1001.py
scrapers/vietstock/quarters/: quarters.py
testing/: autores.py  evaluate_t001.cpp  fn_reports.py  main.py  test_comparison_api.py  test_mongodb_connection.py
utils/: comm_functions.py  data_release_csv.py  driver_mng.py
(+77 files in other folders)
